<resources>
    <string name="app_name">final203</string>
    <string name="Welcome">Welcome</string>
    <string name="Employee">Employee</string>
    <string name="Admin">Admin</string>
    <string name="Logout">Log out</string>
    <string name="login">Login</string>
    <string name="Emps">Employees</string>
    <string name="Holiday_Requests">Holiday Requests</string>
    <string name="Notifications">Notifications</string>
    <string name="Personal_details">Personal Details</string>
    <string name="Add_employee">Add Employee</string>
    <string name="New_emp">Add New Employee</string>
    <string name="date1">18 Jan</string>
    <string name="date2">15 Jan</string>
    <string name="notif1">David Johns has requested a holiday</string>
    <string name="notif2">Password successfully changed</string>
    <string name="notif3">Anny Mary has now been added as a new employee</string>
    <string name="Back">Back</string>
    <string name="emp_add">Add New Employee</string>
    <string name="Name">Name</string>
    <string name="Name2">Name:</string>
    <string name="Surname">Surname</string>
    <string name="Surname2">Surname:</string>
    <string name="Role">Role</string>
    <string name="email">Email</string>
    <string name="Address">Address</string>
    <string name="start_date">Start Date</string>
    <string name="Add">Add</string>
    <string name="salary">Salary</string>
    <string name="Con_duration">Contract Duration</string>
    <string name="H_address">Home Address</string>
    <string name="postcode">Post Code</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="Job_des">Job Description</string>
    <string name="Details">Details</string>
    <string name="ID_num">ID Number</string>
    <string name="Decline">Decline</string>
    <string name="Approve">Approve</string>
    <string name="Reason">Reason</string>
    <string name="end_date">End Date</string>
    <string name="e_name">Employee Name</string>
    <string name="Booked_H">Booked Holidays</string>
    <string name="active">Active</string>
    <string name="Non_active">Non Active</string>
    <string name="Upcoming">Upcoming</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="welcome">Welcome</string>
    <string name="Post_Code">Post Code PL4</string>
    <string name="City_ID">City Plymouth</string>
    <string name="Country_ID">Country United Kingdom</string>
    <string name="ID_Number">ID Number 123456</string>
    <string name="Contract_Duration">Contract Duration 7 Years</string>
    <string name="Salary">Salary £30K</string>
    <string name="Home_Address">Home Address:</string>
    <string name="Job_Description">Job Description Sales Assistant</string>
    <string name="back">Back </string>
    <string name="date_I">19 Jan</string>
    <string name="date_II">Date:</string>
    <string name="Success">Your holiday has been approved</string>
    <string name="Passchange">Password successfully changed</string>
    <string name="Reject">Your holiday request has been rejected</string>
    <string name="Pdetails">Personal Details</string>
    <string name="Request_holi">Request Holiday</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="Date_tag">DD/MM/YYYY</string>
    <string name="Enter_reason">Enter reason for holiday</string>
    <string name="Request">Request</string>
    <string name="Booked_holi">Booked Holidays</string>
    <string name="None_active">Non Active</string>
    <string name="upcoming_date">27 Jan - 3 Feb</string>
    <string name="previous">Previous</string>
    <string name="previous_date">25 Dec 2023 to 1 Jan</string>
    <string name="personal_details">Personal Details</string>
    <string name="log_out">Log Out</string>
    <string name="ID">ID</string>
    <string name="Department">Department</string>
    <string name="leaves">Leaves</string>
    <string name="sal">Salary</string>
    <string name="submit">Submit</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Delete">Delete</string>
    <string name="Placeholder">Placeholder</string>
</resources>