<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="D3D3D3"
    android:padding="8dp">

    <TextView
        android:id="@+id/approvalMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Success"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_II"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/approvalMessage"/>

    <TextView
        android:id="@+id/datePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/Placeholder"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/dateDisplay"
        app:layout_constraintTop_toBottomOf="@+id/approvalMessage"/>

</androidx.constraintlayout.widget.ConstraintLayout>